Wed Oct 31 02:53:07 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/lib/dl/struct.rb: fix strange require order. [ruby-dev:45702]

	* ext/dl/lib/dl/value.rb: ditto

	* test/dl/test_c_struct_entry.rb: remove strange require order from
	  tests.

	* test/dl/test_c_union_entity.rb: ditto

Tue Oct 30 23:59:32 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine): fix the error message when no block is
	  given.  [ruby-dev:46319] [Bug #7244]

	* test/ruby/test_refinement.rb: related test.

Tue Oct 30 19:27:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (redirect_dup2): set standard handles when new fd is stdio,
	  because if there is no allocated console at the moment Windows does
	  not automatically associate it for child process's standard handle.
	  this is adhoc workaround.
	  reported by Martin Thiede at [ruby-core:48542] [Bug #7239].

	* io.c (rb_cloexec_dup2): ditto.

Tue Oct 30 03:08:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rbconfig/obsolete.rb (Config): re-introduce warnings for a
	  lame-duck.  [ruby-core:46836] [Bug #6809]

Tue Oct 30 02:20:10 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* thread.c: added Thread#thread_variable_(get|set),
	  Thread#thread_variable?, and Thread#thread_variables for operating
	  on variables that are local to threads. [ruby-core:47790]

	* vm.c: ditto

	* test/ruby/test_thread.rb: tests for thread variables.

Mon Oct 29 18:22:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_close): close separately per each
	  instances, as well as IO.

Mon Oct 29 10:22:00 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/handlers/recorder.rb: added a class for
	  recording YAML parse and emit events.

	* ext/psych/lib/psych/handler.rb: adding a list of events so that
	  handler classes can more easily be meta-programmed.

	* test/psych/handlers/test_recorder.rb: tests for the change.
